<resources>
    <string name="app_name">PaceCar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="main_top">Current Mileage</string>
    <string name="main_oil">Miles since last oil change</string>
    <string name="main_tires">Miles since last tire rotation</string>
    <string name="main_wipers">Miles till new wipers</string>

    <string name="profile_title">Profile</string>

    <string name="stats_title">Stats</string>
    <string name="stats_odo">Mileage:</string>
    <string name="stats_mpg">Estimated Miles Per Gallon:</string>
    <string name="stats_gas">Monthly gas cost:</string>
    <string name="stats_oil">Miles since last oil change:</string>
    <string name="stats_tire">Miles since last tire rotation:</string>
    <string name="stats_tune">Miles since last tune up:</string>
    <string name="stats_wipers">Need new wipers in:</string>
    <string name="stats_fluids">Check wiper fluid in:</string>

    <string name="log_odo">Mileage:</string>
    <string name="log_money">Money spent on gas:</string>
    <string name="log_check_tank">Did you fill your tank?</string>
    <string name="log_check_oil">Did you change your oil?</string>
    <string name="log_check_tires">Did you rotate your tires?</string>
    <string name="log_check_fluid">Did you refill your wiper fluid?</string>
    <string name="log_check_wipers">Did you change your windshield wipers?</string>
    <string name="log_check_tune">Did you get a tune-up?</string>
    <string name="log_hint">Enter Mileage</string>
    <string name="log_hint2">Enter Cost</string>

    <string name="settings_make">Car Make</string>
    <string name="settings_model">Car Model</string>
    <string name="settings_year">Car Year</string>
    <string name="settings_gas">Gas Tank Capacity</string>
    <string name="settings_push">Push Notifications</string>
    <string name="settings_hint_make">Enter Make</string>
    <string name="settings_hint_model">Enter Model</string>
    <string name="settings_hint_year">Enter Year</string>
    <string name="settings_hint_cap">Enter Capacity</string>

    <string name="log_title">Log</string>

    <string name="settings_title">Settings</string>

    <string name="errorButton">OK</string>
    <string name="errorTitle">Mileage Required</string>
    <string name="errorMessage">You must enter a mileage.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
